--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
-    "name": "api-voucher",
     "builds": [
-       { "src": "main.js", "use": "@vercel/node" }
+        {
+            "src": "src/main.ts",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/main.js" }
+        {
+            "src": "/(.*)",
+            "dest": "src/main.ts",
+            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+        }
     ]
- }
+}
