--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
     "version": 2,
+    "name": "api-voucher",
+    "buildCommand": "yarn build",
     "builds": [
-        {
-            "src": "src/main.ts",
-            "use": "@vercel/node"
-        }
+       { "src": "dist/main", "use": "@vercel/node" }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/main.ts",
-            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
-        }
+       { "src": "/(.*)", "dest": "dist/main" }
     ]
-}
+ }
