--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
     "version": 2,
-    "name": "api-voucher"
+    "name": "api-voucher",
+    "builds": [
+       { "src": "dist/main.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+       { "src": "/(.*)", "dest": "dist/main.js" }
+    ]
  }
