--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
     "name": "api-voucher",
     "installCommand": "yarn install",
     "buildCommand": "yarn build",
-    "outputDirectory": ".",
+    "outputDirectory": "dist",
     "builds": [
-       { "src": "dist/main.js", "use": "@vercel/node" }
+       { "src": "main.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "dist/main.js" }
+       { "src": "/(.*)", "dest": "main.js" }
     ]
  }
