--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 {
     "version": 2,
-    "name": "api-voucher",
-    "installCommand": "yarn install",
-    "buildCommand": "yarn build",
-    "outputDirectory": "dist",
     "builds": [
-       { "src": "main.js", "use": "@vercel/node" }
+       { "src": "src/main.ts", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "main.js" }
+       { "src": "/(.*)", "dest": "src/main.ts" }
     ]
  }
