--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
        { "src": "src/main.ts", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "src/main.ts" }
+       { "src": "/(.*)", "dest": "src/main.ts", "method": ["GET", "POST", "PUT", "DELETE"] }
     ]
  }
