--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
        { "src": "src/main.ts", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "src/main.ts", "method": ["GET", "POST", "PUT", "DELETE"] }
+       { "src": "/(.*)", "dest": "src/main.ts" }
     ],
     "env": {
         "APP_PORT": 3333,
