--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "nestjs-i18n": "^10.2.6",
     "passport": "^0.6.0",
@@ -86,5 +87,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "_moduleAliases": {
+    "@src": "src"
   }
 }
