--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "version": 2,
+    "installCommand": "yarn install && yarn build",
     "builds": [
        { "src": "dist/main.js", "use": "@vercel/node" }
     ],
