--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "installCommand": "yarn install && yarn build",
     "builds": [
+        {
+            "src": "package.json",
+            "use": "vercel-sapper"
+        },
        { "src": "dist/main.js", "use": "@vercel/node" }
     ],
     "routes": [
