--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "version": 2,
+    "installCommand": "yarn install",
+    "buildCommand": "yarn build",
+    "outputDirectory": "dist",
     "devCommand": "yarn start:prod",
     "routes": [
        { "src": "/(.*)", "dest": "dist/main.js" }
