thêm api chiến dịch

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ DB_POSTGRES=web_voucher
 SYNCHRONIZE_POSTGRES=true
 
 DEFAULT_LANGUAGE=vi
+IMGUR_CLIENT_ID=cea997eb6357448
+IMGUR_CLIENT_SECRET=2d3c85576b68f61f1fd01dd341cec6617c45743a
