--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "@types/multer": "^1.4.7",
     "await-to-js": "^3.0.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "imgur": "^2.3.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.2.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
